<resources>
    <string name="app_name">Practica Final</string>
    <string name="title_activity_inicio_admin">InicioAdmin</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="title_activity_inicio_cliente">InicioCliente</string>
    <string name="title_activity_inicio_administrador">InicioAdministrador</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="categoria">Categoria:</string>
    <string name="channel_name">channel</string>
    <string name="autor_de_la_aplicacion">Autor de la aplicacion</string>
    <string name="autor">Miguel Mata Ramos</string>
    <string name="regresar">Regresar</string>
    <string name="login">Login</string>
    <string name="correo_electronico">Correo electrónico</string>
    <string name="contrasenia">Contraseña</string>
    <string name="iniciar_sesion">Iniciar sesión</string>
    <string name="no_tienes_cuenta">¿No tienes cuenta?</string>
    <string name="has_olvidado_tu_contrasenia">¿Has olvidado tu contraseña?</string>
    <string name="crear_cuenta">Crear cuenta</string>
    <string name="nombre">Nombre</string>
    <string name="registrarse">Registrarse</string>
    <string name="precio">Precio</string>
    <string name="crear_carta">Crear carta</string>
    <string name="disponible">Disponible</string>
    <string name="aforo_maximo">Aforo máximo</string>
    <string name="fecha">Fecha</string>
    <string name="crear_evento">Crear evento</string>
    <string name="agregar_carta">Agregar carta</string>
    <string name="editar_carta">Editar carta</string>
    <string name="editar_evento">Editar evento</string>
    <string name="buscador">Buscar...</string>
    <string name="agregar_evento">Agregar evento</string>
    <string name="tus_cartas">Tus cartas</string>
    <string name="eventos_a_los_que_te_has_apuntado">Eventos a los que te has apuntado</string>
    <string name="comprar">Comprar</string>
    <string name="id_cliente"><![CDATA[Id Cliente ->]]></string>
    <string name="id_carta"><![CDATA[Id Carta ->]]></string>
    <string name="nombre_de_carta"><![CDATA[Nombre de Carta ->]]></string>
    <string name="simbolo_euro">€</string>
    <string name="vender">Vender</string>
    <string name="denegar">Denegar</string>
</resources>