<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/cardBorde"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:backgroundTint="@color/black"
        android:layout_margin="50dp"
        app:cardCornerRadius="15dp"
        android:elevation="10dp"
        >
        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/card"

            app:cardCornerRadius="15dp"

            >
            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                >

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/login"
                    android:gravity="center"
                    android:textSize="30sp"
                    android:id="@+id/textViewLogin"
                    app:layout_constraintTop_toTopOf="parent"
                    android:layout_margin="10dp"/>

                <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:id="@+id/textInputLayoutEmail"
                    android:layout_gravity="center"
                    android:hint="@string/correo_electronico"
                    app:layout_constraintTop_toBottomOf="@id/textViewLogin"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintBottom_toTopOf="@id/textInputLayoutPass"
                    android:layout_margin="10dp"
                    >
                    <com.google.android.material.textfield.TextInputEditText
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:inputType="textEmailAddress"
                        android:id="@+id/mail"
                        />
                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:id="@+id/textInputLayoutPass"
                    android:layout_gravity="center"
                    android:hint="@string/contrasenia"
                    app:layout_constraintTop_toBottomOf="@id/textInputLayoutEmail"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    android:layout_margin="10dp"
                    app:passwordToggleEnabled="true"
                    app:layout_constraintBottom_toTopOf="@id/buttonLogin"
                    >
                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/pass"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:inputType="textPassword"
                        />
                </com.google.android.material.textfield.TextInputLayout>

                <Button
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/iniciar_sesion"
                    android:id="@+id/buttonLogin"
                    app:layout_constraintTop_toBottomOf="@id/textInputLayoutPass"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintBottom_toTopOf="@id/textViewNoCuenta"
                    android:layout_margin="10dp"
                    android:background="@drawable/fondoboton"
                    />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/no_tienes_cuenta"
                    android:id="@+id/textViewNoCuenta"
                    app:layout_constraintTop_toBottomOf="@id/buttonLogin"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintBottom_toTopOf="@id/textViewOlvidado"
                    android:layout_margin="10dp"
                    android:textColor="@color/blue"
                    />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/has_olvidado_tu_contrasenia"
                    android:id="@+id/textViewOlvidado"
                    app:layout_constraintTop_toBottomOf="@id/textViewNoCuenta"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintBottom_toBottomOf="parent"
                    android:layout_margin="@dimen/_10dp"
                    android:textColor="@color/blue"
                    />

            </androidx.constraintlayout.widget.ConstraintLayout>
        </androidx.cardview.widget.CardView>
    </androidx.cardview.widget.CardView>

</androidx.constraintlayout.widget.ConstraintLayout>