<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="10dp"
    android:translationZ="10dp"
    app:cardCornerRadius="20dp">


    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/layaut"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="2dp"
        android:paddingBottom="4dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/id_pedido"
            android:text="ID_PEDIDO"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:layout_margin="20dp"
            app:layout_constraintBottom_toTopOf="@id/txt_id_cliente"
            />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/id_cliente"
            android:id="@+id/txt_id_cliente"
            app:layout_constraintTop_toBottomOf="@id/id_pedido"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="20dp"
            android:layout_marginTop="10dp"
            />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Id Cliente"
            android:id="@+id/id_cliente"
            app:layout_constraintTop_toTopOf="@id/txt_id_cliente"
            app:layout_constraintStart_toEndOf="@id/txt_id_cliente"
            />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/id_carta"
            android:id="@+id/txt_id_carta"
            app:layout_constraintTop_toBottomOf="@id/txt_id_cliente"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="20dp"
            />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Id Carta"
            android:id="@+id/id_carta"
            app:layout_constraintTop_toBottomOf="@id/txt_id_cliente"
            app:layout_constraintStart_toEndOf="@id/txt_id_carta"
            />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/nombre_de_carta"
            android:id="@+id/txt_nombre_carta"
            app:layout_constraintTop_toBottomOf="@id/txt_id_carta"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="20dp"
            />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Nombre de Carta"
            android:id="@+id/nombre_carta"
            app:layout_constraintTop_toBottomOf="@id/txt_id_carta"
            app:layout_constraintStart_toEndOf="@id/txt_nombre_carta"
            />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/precio"
            app:layout_constraintBottom_toBottomOf="@id/txt_precio"
            app:layout_constraintEnd_toStartOf="@id/txt_precio"
            android:text="0"
            />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/txt_precio"
            app:layout_constraintBottom_toTopOf="@id/desplegable"
            app:layout_constraintTop_toBottomOf="@id/txt_nombre_carta"
            app:layout_constraintEnd_toEndOf="parent"
            android:text="@string/simbolo_euro"
            android:layout_marginEnd="10dp"
            />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/fecha"
            android:text="00/00/0000"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_margin="10dp"/>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/desplegable"
            app:layout_constraintTop_toBottomOf="@id/txt_precio"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:visibility="gone"
            >

            <androidx.appcompat.widget.AppCompatButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/vender"
                android:text="@string/vender"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toStartOf="@id/denegar"
                android:background="@drawable/fondo_disponible"
                android:textColor="@color/white"
                />

            <androidx.appcompat.widget.AppCompatButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/denegar"
                android:text="@string/denegar"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintStart_toEndOf="@id/vender"
                app:layout_constraintEnd_toEndOf="parent"
                android:background="@drawable/fondo_nodisponible"
                android:textColor="@color/white"
                />

        </androidx.constraintlayout.widget.ConstraintLayout>

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:src="@drawable/abrir"
            android:id="@+id/boton_desplegable"
            app:layout_constraintTop_toBottomOf="@id/desplegable"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            />

    </androidx.constraintlayout.widget.ConstraintLayout>


</androidx.cardview.widget.CardView>